# jsk_2020_04_carry_dish

./: .gitignore  CMakeLists.txt  README.md  contributors.txt  frames.gv  jsk_2020_4_carry_dish.rosintall  package.xml  requirements.txt  tmp_package.xml
config/: attention_hand_pose.rviz  icp_uncolor.rviz  organized_edge_detector.rviz  pr2_tabletop.rviz  realpr2_tabletop.rviz  sample_attention_clipper.rviz  virtual_camera_mono.rviz  xtion_tabletop.rviz
data/: kettle_attention.pcd  kettle_origin_fix.pcd  room73b2_dish.pcd
euslisp/: data_collecion.l  datacollection_servicecall.l  demo.l  get_grasp_point.l  go-to-kitchen.l  grasp_move_sequence.l  grasp_primitive.l  grasp_sequence.l  grasp_sequence.py  graspdish.l  irt-demo.l  kinematics-demo.l  pr2-tabletop-object-grasp-base.l  pr2-tabletop-object-grasp-dual-move.l  pr2-tabletop-object-grasp-dual-success.l  pr2-tabletop-object-grasp-dual-tray-pick-auto.l  pr2-tabletop-object-grasp-dual-tray-pick-screen.l  pr2-tabletop-object-grasp-dual-tray-pick.l  pr2-tabletop-object-grasp-dual-tray-put.l  pr2-tabletop-object-grasp-rarm-bowl.l  pr2-tabletop-object-grasp-rarm-drop.l  pr2-tabletop-object-grasp-rarm-judge.l  pr2-tabletop-object-grasp-rarm-mayo.l  pr2-tabletop-object-grasp-rarm-rim.l  pr2-tabletop-object-grasp-rarm-washoku.l  pregrasp.l  realpr2_grasp_sequence.l  sm-grasp.l  sub_grasp_point.bk.l  sub_grasp_point.l  sub_grasp_point_once.l  test_grasp_sequence.l  test_moveit_grasp_sequence.l  test_server.l  tf_base2hand.l  tips.md  util.l
launch/: attention_hand_pose.launch  box_atention_clipper.launch  common.launch  (+27 more)
(+94 files in other folders)
